@@ -1,4 +1,4 @@
-Copyright (c) 2010-2011 Jan Lelis
+Copyright (c) 2010-2012 Jan Lelis
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
