@@ -15,9 +15,14 @@ def cat(path)
   File.read path
 end
 
-# allows concise syntax like rq:mathn and reloading/requiring
+# allows concise syntax like rq:mathn
 def rq(lib)
   require lib.to_s
+end
+
+# load shortcut, not suited for non-rb
+def ld(lib)
+  load lib.to_s + '.rb'
 end
 
 # rerequire, not suited for non-rb, please note: can have non-intended side effects in rare cases
@@ -32,23 +37,6 @@ def rerequire(lib)
   true
 end
 alias rrq rerequire
-
-# load shortcut, not suited for non-rb
-def ld(lib)
-  load lib.to_s + '.rb'
-end
-
-# returns the last lines, needed for some copy_ methods
-def session_history(number_of_lines = nil)
-  if !number_of_lines
-    if defined?(Ripl) && Ripl.respond_to?(:started?) && Ripl.started?
-      number_of_lines = Ripl.shell.line
-    else
-      number_of_lines = context.instance_variable_get(:@line_no)
-    end
-  end
-  Readline::HISTORY.entries[-number_of_lines...-1]*"\n"
-end
 
 # restart irb
 def reset!
@@ -66,6 +54,18 @@ end
 # just clear the screen
 def clear
   system 'clear'
+end
+
+# returns the last lines, needed for some copy_ methods
+def session_history(number_of_lines = nil)
+  if !number_of_lines
+    if defined?(Ripl) && Ripl.respond_to?(:started?) && Ripl.started?
+      number_of_lines = Ripl.shell.line
+    else
+      number_of_lines = context.instance_variable_get(:@line_no)
+    end
+  end
+  Readline::HISTORY.entries[-number_of_lines...-1]*"\n"
 end
 
 # load debugger, inspired by rdp
